# text-to-speech-agents-tts-1

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  gpt4_tts.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  text_to_speech.py  tts1_batch.py  tts1_cli.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  release.yml
docs/: README.md
examples/: basic_usage.py  batch_processing.py  streaming_example.py
scripts/: setup.bat  setup.sh
src/tts_agents/: __init__.py  batch.py  cli.py  core.py  exceptions.py  models.py  streaming.py
tests/: __init__.py  test_core.py  test_models.py
