[project]
name = "blogs-agent"
version = "0.1.0"
description = "An AI-powered blog generation agent with E-E-A-T compliance"
authors = [
    { name = "Muhammad Bilal Khan", email = "muhammadbilalkhan@ai.com" }
]
dependencies = [
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "typing-extensions>=4.9.0",
    "openai-agents>=0.0.7",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blogs_agent"]

[tool.hatch.build]
include = [
    "blogs_agent/**/*.py",
    "blogs_agent/**/*.json",
    "blogs_agent/**/*.yaml",
    "blogs_agent/**/*.yml",
]

[tool.hatch.build.targets.sdist]
include = [
    "blogs_agent/**/*.py",
    "blogs_agent/**/*.json",
    "blogs_agent/**/*.yaml",
    "blogs_agent/**/*.yml",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]

[tool.ruff.isort]
known-first-party = ["blogs_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=blogs_agent --cov-report=term-missing"
